Actualizar proyecto de clasificación de vinos

--- a/proyecto_wine_act2_mod11_v3.ipynb
+++ b/proyecto_wine_act2_mod11_v3.ipynb
@@ -2879,13 +2879,7 @@
         "\n",
         "### Importancia de Características (Regresión Logística)\n",
         "\n",
-        "- El análisis de importancia por permutación para el modelo de Regresión Logística identificó a `proline`, `flavanoids`, `hue`, `alcohol`, `alcalinity_of_ash`, `ash`, `od280/od315_of_diluted_wines`, `color_intensity`, `proanthocyanins`, `total_phenols`, `malic_acid` y `nonflavanoid_phenols` como características importantes, listadas en orden descendente de importancia. Esto concuerda con las intuiciones del dominio (química del vino).\n",
-        "\n",
-        "### Pipeline Reproductible\n",
-        "\n",
-        "- Se ha seguido un flujo estándar de Machine Learning: carga de datos, EDA, división estratificada, escalado de características, entrenamiento de modelos, evaluación y ajuste de hiperparámetros (para SVM). Los pasos están organizados secuencialmente en el notebook para facilitar la reproducibilidad.\n",
-        "\n",
-        "Este notebook cubre los puntos clave definidos en el propósito inicial. Ahora puedes revisar las secciones de código y Markdown, añadir cualquier detalle adicional que consideres relevante y completar la plantilla de revisión por pares."
+        "- El análisis de importancia por permutación para el modelo de Regresión Logística identificó a `proline`, `flavanoids`, `hue`, `alcohol`, `alcalinity_of_ash`, `ash`, `od280/od315_of_diluted_wines`, `color_intensity`, `proanthocyanins`, `total_phenols`, `malic_acid` y `nonflavanoid_phenols` como características importantes, listadas en orden descendente de importancia. Esto concuerda con las intuiciones del dominio (química del vino).\n"
       ],
       "id": "296343f3"
     }
